[package]
name = "max_stock_profit_with_logging_and_tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.10.0"
lambda_runtime = "0.10.0"
serde = "1.0.197"
serde_json = "1.0.114"
rand = "0.8.4"
rand_distr = "0.4.1"

tokio = { version = "1", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


